# app/api/openapi.yaml
@@ -40,6 +40,30 @@ paths:
         httpMethod: POST
         uri: "__LAMBDA_INTEGRATION_URI__"
         passthroughBehavior: when_no_match
+    options: &cors-preflight
+      summary: CORS preflight
+      responses:
+        "200":
+          description: CORS preflight response
+          headers:
+            Access-Control-Allow-Origin:
+              schema: {type: string}
+            Access-Control-Allow-Methods:
+              schema: {type: string}
+            Access-Control-Allow-Headers:
+              schema: {type: string}
+          content: {}
+      x-amazon-apigateway-integration:
+        type: mock
+        requestTemplates:
+          application/json: '{"statusCode": 200}'
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Methods: "'GET,POST,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-User-Id'"
 
   /gardens/{gardenId}:
     get:
@@ -70,6 +94,7 @@ paths:
         httpMethod: POST
         uri: "__LAMBDA_INTEGRATION_URI__"
         passthroughBehavior: when_no_match
+    options: *cors-preflight
 
 components:
   parameters:
